--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nobitaxd",
   "version": "1.0.0",
-  "description": "YouTube video downloader API using yt-dlp-exec",
+  "description": "YouTube video downloader API using youtube-dl-exec",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -9,14 +9,13 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "yt-dlp-exec": "^1.3.5",
+    "youtube-dl-exec": "^3.0.5",
     "cors": "^2.8.5"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "22.x"
   },
   "keywords": [
-    "yt-dlp",
     "youtube",
     "downloader",
     "api",
