--- a/package.json
+++ b/package.json
@@ -1,26 +1,17 @@
 {
   "name": "nobitaxd",
   "version": "1.0.0",
-  "description": "YouTube video downloader API using youtube-dl-exec",
-  "main": "index.js",
-  "type": "module",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "youtube-dl-exec": "^3.0.5",
+    "yt-dlp-exec": "^1.2.4",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5"
   },
   "engines": {
-    "node": "22.x"
-  },
-  "keywords": [
-    "youtube",
-    "downloader",
-    "api",
-    "nobitaxd"
-  ],
-  "author": "NobitaXD",
-  "license": "MIT"
+    "node": ">=18.0.0"
+  }
 }
