--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "nobitaxd",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
-  "dependencies": {
-    "express": "^4.18.2",
-    "yt-dlp-exec": "^1.2.4",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5"
-  },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "22.x"
+  },
+  "dependencies": {
+    "express": "^4.19.2",
+    "yt-dlp-exec": "latest",
+    "cors": "^2.8.5",
+    "node-fetch": "^3.3.2"
   }
 }
