--- a/package.json
+++ b/package.json
@@ -2,17 +2,12 @@
   "name": "nobitaxd",
   "version": "1.0.0",
   "main": "server.js",
-  "type": "module",
+  "engines": { "node": "22.x" },
   "scripts": {
     "start": "node server.js"
   },
-  "engines": {
-    "node": "22.x"
-  },
   "dependencies": {
-    "express": "^4.19.2",
-    "yt-dlp-exec": "latest",
-    "cors": "^2.8.5",
-    "node-fetch": "^3.3.2"
+    "express": "^4.18.2",
+    "yt-dlp-exec": "^1.3.0"
   }
 }
